--- a/seahub/templates/base_for_backbone.html
+++ b/seahub/templates/base_for_backbone.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" type="text/css" href="{% static "css/select2-3.5.2.css" %}" />
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seahub.css?t=1398068110" />
 <link rel="stylesheet" type="text/css" href="{% static "css/magnific-popup.css" %}" />
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/jstree_default_theme/style.min.css" />
 {% endcompress %}
 
 {% block extra_style %}{% endblock %}
